# GUI-for-database-mapping-script

./: Base script 1.ipynb  Base script.ipynb  Example data.xlsx  GUI version of simplified base script.py  Project Proposal  README.md  example data base script.xlsx  example output base script.html  pyproject.toml  test_file.py  test_file2.py
